src/main/java/com/example/citron/web/errors/field/FieldNotFoundException.java
package com.example.citron.web.errors.field;

public class FieldNotFoundException extends RuntimeException{
    public FieldNotFoundException(String id){
        super(id);
    }
}
